@@ -271,7 +271,8 @@ IBM developerWorks	ibm-dev.components ibm-dev.java ibm-dev.linux
 Muchy's Palmware Review! muchy.review
 PalmFan			palmfan.news palmfan.palmwarefan
 pilot-link              pilot-link.announce pilot-link.devel pilot-link.general
-			unix-ng
+			pilot-link.unix-ng
+Coldsync		coldsync.main
 PCWEB COLUMN Square	pcweb-column.gyokai pcweb-column.benri
 			pcweb-column.hitech pcweb-column.business
 			pcweb-column.winxp pcweb-column.bytes
